# shrink_bitvm2

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  justfile
.cargo/: config.toml
boundless_example/: Cargo.toml
boundless_example/src/: main.rs
dockerfiles/: prover.dockerfile
guest/: Cargo.toml
scripts/: rapidsnark-prover-witcalc.sh
shrink_bitvm2/: Cargo.toml
shrink_bitvm2/src/: lib.rs  prove.rs  receipt_claim.rs  verify.rs
shrink_bitvm2/src/prove/: cuda.rs  docker.rs  witgen.rs
shrink_bitvm2_prover/: Cargo.toml  README.md
shrink_bitvm2_prover/src/: cuda.rs  lib.rs  rapidsnark.rs
xtask/: Cargo.toml
xtask/src/: main.rs  setup_groth16.rs
