[workspace]
resolver = "2"
members = ["shrink_bitvm2"]
exclude = ["shrink_bitvm2_prover"]

[workspace.dependencies]
risc0-zkvm = { version = "3.0.3", default-features = false }
risc0-zkp = { version = "3.0.2", default-features = false }
risc0-circuit-recursion = "4.0.2"
risc0-groth16 = { version = "3.0.2", features = ["prove"] }
risc0-groth16-sys = { version = "0.1.0" }
risc0-build = { version = "3.0.3" }
risc0-binfmt = {version = "3.0.2"}

hex = "0.4.3"
env_logger = "0.10"
borsh = {version = "1.5.3", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
anyhow = { version = "1.0", default-features = false}
tempfile = "3.20"
bitcoincore-rpc = "0.19.0"
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0", default-features = false }
num-bigint = { version="0.4.5", features=["std"] }
num-traits = "0.2.19"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"] }
