[workspace]
resolver = "2"
members = ["shrink_bitvm2", "xtask", "guest"]
exclude = ["boundless_example"]
[workspace.dependencies]
guest = { path = "guest" }

risc0-zkvm = { version = "3.0.3", default-features = false }
risc0-zkp = { version = "3.0.2", default-features = false }
risc0-circuit-recursion = { version = "4.0.2", default-features = false }
risc0-groth16 = { version = "3.0.2", default-features = false }
risc0-groth16-sys = { version = "0.1.0" }

hex = "0.4.3"
env_logger = "0.10"
borsh = {version = "1.5.3", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
anyhow = { version = "1.0", default-features = false}
tempfile = "3.20"
bitcoincore-rpc = "0.19.0"
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0", default-features = false }
num-bigint = { version="0.4.5", features=["std"] }
num-traits = "0.2.19"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"] }
blake3 = { version = "1.5.0" }

ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = { version = "0.5.0" }
ark-serialize = "0.5.0"


sha2 = "0.10"


[patch.crates-io]
risc0-groth16 = { git = "https://github.com/ec2/risc0.git", rev = "193ebbb3ea5e7a73388cb97724c7581116c58839" }
risc0-groth16-sys = { git = "https://github.com/ec2/risc0.git", rev = "193ebbb3ea5e7a73388cb97724c7581116c58839" }
risc0-zkp = { git = "https://github.com/ec2/risc0.git", rev = "193ebbb3ea5e7a73388cb97724c7581116c58839" }
risc0-binfmt = { git = "https://github.com/ec2/risc0.git", rev = "193ebbb3ea5e7a73388cb97724c7581116c58839" }
risc0-build = { git = "https://github.com/ec2/risc0.git", rev = "193ebbb3ea5e7a73388cb97724c7581116c58839" }
risc0-zkvm = { git = "https://github.com/ec2/risc0.git", rev = "193ebbb3ea5e7a73388cb97724c7581116c58839" }
risc0-circuit-recursion = { git = "https://github.com/ec2/risc0.git", rev = "193ebbb3ea5e7a73388cb97724c7581116c58839" }
