[package]
name = "boundless_example"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1", default-features = false, features = ["essentials"]}
alloy-primitives = { version = "1.2.1", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "1.2.1" }
anyhow = { version = "1.0", default-features = false }
boundless-market = {  path = "/home/etu/boundless/crates/boundless-market" }
clap = { version = "4.5", features = ["derive", "env"] }
guest = { path = "../guest" }
shrink_bitvm2 = { path = "../shrink_bitvm2", default-features = false }
tokio = { version = "1.39", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = {version = "0.3", features = ["env-filter"] }
url = "2.5"