[package]
name = "guest"
resolver = "2"
version = "0.1.0"
edition = "2024"
publish = false

[build-dependencies]
hex = { workspace = true }
risc0-build = { version = "3.0.3", features = ["docker", "unstable"] }

[package.metadata.risc0]
methods = ["echo"]

[package.metadata.release]
release = false
