[package]
name = "shrink_bitvm2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
borsh.workspace = true
risc0-groth16 = { workspace = true }
serde_json.workspace = true
risc0-zkvm.workspace = true
tempfile.workspace = true
hex.workspace = true
serde.workspace = true
blake3 = { version = "1.5.0" }
sha2 = "0.10"
tracing.workspace = true

[features]
prove = ["risc0-zkvm/prove"]