[package]
name = "shrink_bitvm2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
borsh.workspace = true
risc0-groth16 = { workspace = true }
risc0-groth16-sys = { workspace = true, optional = true }
risc0-circuit-recursion = { workspace = true }
risc0-zkp = { workspace = true }
serde_json.workspace = true
risc0-zkvm.workspace = true
tempfile.workspace = true
hex.workspace = true
serde.workspace = true
blake3.workspace = true
sha2.workspace = true
tracing.workspace = true

ark-bn254.workspace = true
ark-ff.workspace = true
ark-groth16.workspace = true
ark-serialize.workspace = true

crypto-bigint.workspace = true
num-bigint = { workspace = true, features=["std"] }
num-traits.workspace = true

# cuda
circom-witnesscalc = { version = "0.2.1" }
wtns-file = { version = "0.1.5" }

[dev-dependencies]
guest.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["prove"]
prove = ["risc0-zkvm/prove"]
cuda = ["prove", "risc0-zkvm/cuda", "risc0-groth16/cuda", "dep:risc0-groth16-sys"]
