[workspace]
resolver = "2"

[package]
name = "shrink_bitvm2_prover"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "prover"

[[bin]]
name = "setup"
required-features = ["setup"]


[dependencies]
anyhow = { version = "1.0", default-features = false}
hex = { version = "0.4.3" }
num-bigint = { version = "0.4", features = ["std"] }
num-traits = "0.2.19"
risc0-groth16 = { version = "3.0.2", features = ["prove"] }
risc0-groth16-sys = { version = "0.1.0" }
risc0-zkp = { version = "3.0.2", default-features = false, features = ["prove"] }
risc0-zkvm = {  version = "3.0.3", features = ["std", "client", "prove"] }
cfg-if = { version = "1.0" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
sha2 = "0.10"
tempfile = { version = "3.20" }
tracing = { version = "0.1.40" }
wtns-file = { version = "0.1.5", optional = true }
circom-witnesscalc = { version = "0.2.1", optional = true }
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = { version = "0.5.0" }
ark-serialize = "0.5.0"
blake3 = { version = "1.5.0" }
clap = { version = "4.0", features = ["derive"] }
borsh = {version = "1.5.3", features = ["derive"] }
tracing-subscriber = {version = "0.3.19", features = ["env-filter"] }
xshell = "0.2"
rlimit = "0.10.2"

[features]
default = ["cuda"]
setup = ["cuda", "risc0-groth16-sys/setup"]
cuda = ["risc0-zkvm/cuda", "risc0-groth16/cuda", "dep:wtns-file", "dep:circom-witnesscalc"]

[patch.crates-io]
risc0-groth16 = { git = "https://github.com/ec2/risc0.git", rev = "5701800c54e1e3e9ba5fae95f901050b17eb296a" }
risc0-groth16-sys = { git = "https://github.com/ec2/risc0.git", rev = "5701800c54e1e3e9ba5fae95f901050b17eb296a" }
risc0-zkp = { git = "https://github.com/ec2/risc0.git", rev = "5701800c54e1e3e9ba5fae95f901050b17eb296a" }
risc0-binfmt = { git = "https://github.com/ec2/risc0.git", rev = "5701800c54e1e3e9ba5fae95f901050b17eb296a" }
risc0-build = { git = "https://github.com/ec2/risc0.git", rev = "5701800c54e1e3e9ba5fae95f901050b17eb296a" }
risc0-zkvm = { git = "https://github.com/ec2/risc0.git", rev = "5701800c54e1e3e9ba5fae95f901050b17eb296a" }
risc0-circuit-recursion = { git = "https://github.com/ec2/risc0.git", rev = "5701800c54e1e3e9ba5fae95f901050b17eb296a" }
